<resources>
    <string name="app_name">project-1</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_label_text">Email</string>
    <string name="password_label_text">Password</string>
    <string name="email_field_hint_text">Email</string>
    <string name="password_hint_text">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="email_hint_text">example@mail.com</string>
    <string name="select_your_shoes_now">Select Your Shoes Now</string>
    <string name="instructions_title_text">How it work?</string>
    <string name="instructions_text">

        1- Press on + button.\n\n
        2- Fill the form.\n\n
        3- Add your new shoe.
    </string>
    <string name="start_button">Start</string>
    <string name="add_shoe_button_text">Add Shoe</string>
    <string name="scroll_view_text">Shoe List</string>
    <string name="name_text">Name</string>
    <string name="company">Company</string>
    <string name="size_text">Size</string>
    <string name="descreption_text">Description</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
</resources>